Custom--app/main/default/objects/SF_Project__c/SF_Project__c.object-meta.xml
<CustomObject>
    <description>This object is used to track  high-level information for SF Team projects.</description>
    <label>SF Project</label>
    <nameField>
        <label>SF Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SF Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>