Custom--app/main/default/objects/SF_Project__c/fields/Business_Complexity_Severity__c.field-meta.xml
<CustomField>
    <fullName>Business_Complexity_Severity__c</fullName>
    <label>Business Complexity / Severity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>