Custom--app/main/default/objects/SF_Project__c/fields/Business_Problem__c.field-meta.xml
<CustomField>
    <fullName>Business_Problem__c</fullName>
    <label>Business Problem</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>