Custom--app/main/default/objects/SF_Project__c/fields/Critical_Dependencies__c.field-meta.xml
<CustomField>
    <fullName>Critical_Dependencies__c</fullName>
    <inlineHelpText>Please note if this project has specific technical dependencies (such as another project that needs to get completed before it can get started) or other dependencies such as business process definition, etc. that could impact the start or finish date.</inlineHelpText>
    <label>Critical Dependencies</label>
    <type>TextArea</type>
</CustomField>