Custom--app/main/default/objects/SF_Project__c/fields/Days_Diff_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Diff_Start_Date__c</fullName>
    <formula>Actual_Start_Date__c - Planned_Start_Date__c</formula>
    <label># Days Diff. Start Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>