Custom--app/main/default/objects/SF_Project__c/fields/Deadline_Details__c.field-meta.xml
<CustomField>
    <fullName>Deadline_Details__c</fullName>
    <inlineHelpText>Please provide information regarding this deadline.  Who set it?  Why is it important?</inlineHelpText>
    <label>Deadline Details</label>
    <type>TextArea</type>
</CustomField>