Custom--app/main/default/objects/SF_Project__c/fields/Description_of_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Resolution__c</fullName>
    <label>Description of Resolution</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>