Custom--app/main/default/objects/SF_Project__c/fields/Due_to_QA__c.field-meta.xml
<CustomField>
    <fullName>Due_to_QA__c</fullName>
    <label>Due to QA</label>
    <type>Date</type>
</CustomField>