Custom--app/main/default/objects/SF_Project__c/fields/Execution_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Execution_Strategy__c</fullName>
    <inlineHelpText>Use this field to define our approach to this project, including what resources will be on point for delivery.  (In-house, regional team, contractors, SF.com Strategic Services, etc.)</inlineHelpText>
    <label>Execution Strategy</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>