Custom--app/main/default/objects/SF_Project__c/fields/In_Scope__c.field-meta.xml
<CustomField>
    <fullName>In_Scope__c</fullName>
    <label>In Scope</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>