Custom--app/main/default/objects/SF_Project__c/fields/Level_of_Technical_Complexity__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Technical_Complexity__c</fullName>
    <label>Level of Technical Complexity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None - All Config / Operations</fullName>
            </value>
            <value>
                <fullName>Minimal - Light Dev Required</fullName>
            </value>
            <value>
                <fullName>Some -  Some Dev Required</fullName>
            </value>
            <value>
                <fullName>Significant Dev Required</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>