Custom--app/main/default/objects/SF_Project__c/fields/Ongoing_Impact_to_sf_com_Team__c.field-meta.xml
<CustomField>
    <fullName>Ongoing_Impact_to_sf_com_Team__c</fullName>
    <inlineHelpText>Use this field to indicate what, if any, ongoing impact the completion of this project will have on the sf.com team in terms of resources or effort to support.</inlineHelpText>
    <label>Ongoing Impact to sf.com Team</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>