Custom--app/main/default/objects/SF_Project__c/fields/Parent_SIR__c.field-meta.xml
<CustomField>
    <fullName>Parent_SIR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent SIR</label>
    <referenceTo>Issues_New_Feature_Request__c</referenceTo>
    <relationshipLabel>SF Projects</relationshipLabel>
    <relationshipName>SF_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>