Custom--app/main/default/objects/SF_Project__c/fields/Primary_Stakeholder_s__c.field-meta.xml
<CustomField>
    <fullName>Primary_Stakeholder_s__c</fullName>
    <label>Primary Stakeholder(s)</label>
    <type>TextArea</type>
</CustomField>