Custom--app/main/default/objects/SF_Project__c/fields/Project_Lead_s__c.field-meta.xml
<CustomField>
    <fullName>Project_Lead_s__c</fullName>
    <label>Project Lead(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brad Greiwe</fullName>
            </value>
            <value>
                <fullName>Brant Hanna</fullName>
            </value>
            <value>
                <fullName>Brittany Bond</fullName>
            </value>
            <value>
                <fullName>Dave Seligson</fullName>
            </value>
            <value>
                <fullName>Jodi Hrbek</fullName>
            </value>
            <value>
                <fullName>Jonathan Major</fullName>
            </value>
            <value>
                <fullName>Kevin Tran</fullName>
            </value>
            <value>
                <fullName>Mara Pederson</fullName>
            </value>
            <value>
                <fullName>Matt Lent</fullName>
            </value>
            <value>
                <fullName>Melanie Matney</fullName>
            </value>
            <value>
                <fullName>Naveen Skaria</fullName>
            </value>
            <value>
                <fullName>Randy Kish</fullName>
            </value>
            <value>
                <fullName>Terraell Hazlett</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>