Custom--app/main/default/objects/SF_Project__c/fields/Target_Deploy__c.field-meta.xml
<CustomField>
    <fullName>Target_Deploy__c</fullName>
    <label>Target Deploy</label>
    <type>Date</type>
</CustomField>