Custom--app/main/default/objects/SF_Project__c/fields/Technical_Complexity_Comments__c.field-meta.xml
<CustomField>
    <fullName>Technical_Complexity_Comments__c</fullName>
    <label>Technical Complexity Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>