Custom--app/main/default/objects/SF_Project__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enhancement</fullName>
            </value>
            <value>
                <fullName>System Maintenance  &amp; Support</fullName>
            </value>
            <value>
                <fullName>System/Process Documentation</fullName>
            </value>
            <value>
                <fullName>"Flash" Project</fullName>
            </value>
            <value>
                <fullName>Formal (PMO) Project</fullName>
            </value>
            <value>
                <fullName>Training / Communication</fullName>
            </value>
            <value>
                <fullName>Data Remediation</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>