Custom--app/main/default/objects/SF_Project__c/listViews/All_Open_not_System_Maintenance.listView-meta.xml
<ListView>
    <fullName>All_Open_not_System_Maintenance</fullName>
    <columns>OWNER.LAST_NAME</columns>
    <columns>NAME</columns>
    <columns>Business_Problem__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Status_Comments__c</columns>
    <columns>Project_Lead_s__c</columns>
    <columns>Planned_Start_Date__c</columns>
    <columns>Planned_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>HOLD,Completed,Cancelled</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>notEqual</operation>
        <value>System Maintenance  &amp; Support</value>
    </filters>
    <label>All Open - Not Incl. System Maintenance</label>
</ListView>