Custom--app/main/default/objects/SF_Project__c/listViews/All_Open_System_Process_Documentation.listView-meta.xml
<ListView>
    <fullName>All_Open_System_Process_Documentation</fullName>
    <columns>OWNER.LAST_NAME</columns>
    <columns>NAME</columns>
    <columns>Business_Problem__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Status_Comments__c</columns>
    <columns>Project_Lead_s__c</columns>
    <columns>Deadline__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Cancelled</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>System/Process Documentation</value>
    </filters>
    <label>All Open - System/Process Documentation</label>
</ListView>